Fixed overflow problems

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@
 /* tr{
     border: 2px solid red;
 } */
+
+html,
+body {
+  margin: 0px;
+  height: 100%;
+}
